--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 <meta property="og:title" content="" />
 <meta property="og:description" content="Nutrition Coach &amp; Chef Consultant" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://BakerLabBABS.github.io/" /><meta property="og:image" content="http://BakerLabBABS.github.io/images/cover-image.jpg"/><meta property="og:site_name" content="Jane Doe - Nutrition Coach &amp; Chef Consultant" />
+<meta property="og:url" content="http://BakerLabBABS.github.io/" /><meta property="og:image" content="http://BakerLabBABS.github.io/images/cover-image.jpg"/><meta property="og:site_name" content="Baker Labe - Synthetic and Evolutionary Biology" />
 
 
 <meta name="twitter:card" content="summary_large_image"/>
