--- a/public/services/index.html
+++ b/public/services/index.html
@@ -37,7 +37,7 @@ Well, let me tell ya!
 <meta property="og:type" content="article" />
 <meta property="og:url" content="http://BakerLabBABS.github.io/services/" /><meta property="og:image" content="http://BakerLabBABS.github.io/images/cover-image.jpg"/><meta property="article:section" content="" />
 
-<meta property="og:site_name" content="Jane Doe - Nutrition Coach &amp; Chef Consultant" />
+<meta property="og:site_name" content="Baker Labe - Synthetic and Evolutionary Biology" />
 
 
 <meta name="twitter:card" content="summary_large_image"/>
