--- a/public/index.html
+++ b/public/index.html
@@ -82,8 +82,8 @@
     <div class="vertical">
         <div id="site-head-content" class="inner">
 
-            <h1 class="blog-title">Jane Doe</h1>
-            <h2 class="blog-description">Hi there , I am a Nutrition Coach &amp; Chef Consultant</h2>
+            <h1 class="blog-title">Baker Lab - UNSW Sydney</h1>
+            <h2 class="blog-description">We work on synthetic and evolutionary biology</h2>
 
             
                  <a class='btn site-menu' data-title-anchor='research'>Research</a>
