--- a/services/index.html
+++ b/services/index.html
@@ -1,16 +1,16 @@
 <!doctype html><html><meta http-equiv=content-type content="text/html" charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
 <title>Services</title>
-<link rel="shortcut icon" href=http://BakerLabBABS.github.io/images/favicon.png type=image/png>
-<meta name=description content="Nutrition Coach & Chef Consultant">
-<meta name=keywords content="some,keywords,for,seo,you,know,google,duckduckgo,and,such">
+<link rel="shortcut icon" href=https://bakerlabbabs.github.io/images/favicon.png type=image/png>
+<meta name=description content="Baker Lab - UNSW">
+<meta name=keywords content="flagellar motor synthetic biology evolution lipids DNA nanotechnology">
 <meta name=referrer content="no-referrer-when-downgrade">
 <meta name=HandheldFriendly content="True">
 <meta name=MobileOptimized content="320">
 <meta name=viewport content="width=device-width,initial-scale=1">
-<link rel=stylesheet href=http://BakerLabBABS.github.io/css/screen.css>
-<link rel=stylesheet href=http://BakerLabBABS.github.io/css/fonts.css type=text/css>
-<link rel=stylesheet href=http://BakerLabBABS.github.io/fork-awesome/css/fork-awesome.min.css type=text/css>
+<link rel=stylesheet href=https://bakerlabbabs.github.io/css/screen.css>
+<link rel=stylesheet href=https://bakerlabbabs.github.io/css/fonts.css type=text/css>
+<link rel=stylesheet href=https://bakerlabbabs.github.io/fork-awesome/css/fork-awesome.min.css type=text/css>
 <meta property="og:title" content="Services">
 <meta property="og:description" content="This is a page about the services, which I offer.
 It carries a lot more detail than what I put on the homepage - I swear!
@@ -18,10 +18,10 @@ You want to know what I can do for you?
 Well, let me tell ya!
  Nutrition Coaching This is not an easy task. You will likely have to pay money for this. You know what - let us look at a nice picture first.">
 <meta property="og:type" content="article">
-<meta property="og:url" content="http://BakerLabBABS.github.io/services/"><meta property="og:image" content="http://BakerLabBABS.github.io/images/cover-image.jpg"><meta property="article:section" content>
-<meta property="og:site_name" content="Baker Labe - Synthetic and Evolutionary Biology">
+<meta property="og:url" content="https://bakerlabbabs.github.io/services/"><meta property="og:image" content="https://bakerlabbabs.github.io/images/cover-image.jpg"><meta property="article:section" content>
+<meta property="og:site_name" content="Baker Lab - Synthetic and Evolutionary Biology">
 <meta name=twitter:card content="summary_large_image">
-<meta name=twitter:image content="http://BakerLabBABS.github.io/images/cover-image.jpg">
+<meta name=twitter:image content="https://bakerlabbabs.github.io/images/cover-image.jpg">
 <meta name=twitter:title content="Services">
 <meta name=twitter:description content="This is a page about the services, which I offer.
 It carries a lot more detail than what I put on the homepage - I swear!
@@ -34,17 +34,17 @@ It carries a lot more detail than what I put on the homepage - I swear!
 You want to know what I can do for you?
 Well, let me tell ya!
  Nutrition Coaching This is not an easy task. You will likely have to pay money for this. You know what - let us look at a nice picture first.">
-<meta itemprop=wordCount content="102"><meta itemprop=image content="http://BakerLabBABS.github.io/images/cover-image.jpg">
+<meta itemprop=wordCount content="102"><meta itemprop=image content="https://bakerlabbabs.github.io/images/cover-image.jpg">
 <meta itemprop=keywords content>
-<link rel=apple-touch-icon sizes=180x180 href=http://BakerLabBABS.github.io/images/apple-touch-icon.png>
-<link rel=icon type=image/png sizes=32x32 href=http://BakerLabBABS.github.io/images/favicon-32x32.png>
-<link rel=icon type=image/png sizes=16x16 href=http://BakerLabBABS.github.io/images/favicon-16x16.png>
+<link rel=apple-touch-icon sizes=180x180 href=https://bakerlabbabs.github.io/images/apple-touch-icon.png>
+<link rel=icon type=image/png sizes=32x32 href=https://bakerlabbabs.github.io/images/favicon-32x32.png>
+<link rel=icon type=image/png sizes=16x16 href=https://bakerlabbabs.github.io/images/favicon-16x16.png>
 <body>
 <main class="content page-template page-" role=main>
 <article class="post page">
 <header class=post-header>
-<a id=blog-logo href=/>
-Jane Doe - Nutrition Coach & Chef Consultant
+<a id=blog-logo href=../>
+Baker Lab at UNSW - Synthetic and Evolutionary Biology
 </a>
 </header>
 <h1 class=post-title>Services</h1>
@@ -70,7 +70,7 @@ Jane Doe - Nutrition Coach & Chef Consultant
 </main>
 <footer class=site-footer>
 <div class=inner>
-<section class=copyright>© Jane Doe</section>
+<section class=copyright>© Matt Baker</section>
 <section></section>
 <section>
 <a href=https://themes.gohugo.io/hugo-scroll/>Design</a> template
@@ -79,8 +79,8 @@ built with ♥️ by
 </section>
 </div>
 </footer>
-<script type=text/javascript src=http://BakerLabBABS.github.io/js/jquery-1.11.3.min.js></script>
-<script type=text/javascript src=http://BakerLabBABS.github.io/js/icons.js></script>
-<script type=text/javascript src=http://BakerLabBABS.github.io/js/index.js></script>
+<script type=text/javascript src=https://bakerlabbabs.github.io/js/jquery-1.11.3.min.js></script>
+<script type=text/javascript src=https://bakerlabbabs.github.io/js/icons.js></script>
+<script type=text/javascript src=https://bakerlabbabs.github.io/js/index.js></script>
 </body>
 </html>
