--- a/404.html
+++ b/404.html
@@ -41,7 +41,7 @@ Give it another try:
 </main>
 <footer class=site-footer>
 <div class=inner>
-<section class=copyright>© Matt Baker</section>
+<section class=copyright>© Matt Baker (borrowing inspiration from Scott Berry)</section>
 <section></section>
 <section>
 <a href=https://themes.gohugo.io/hugo-scroll/>Design</a> template
