--- a/services/index.html
+++ b/services/index.html
@@ -70,7 +70,7 @@ Baker Lab at UNSW - Synthetic and Evolutionary Biology
 </main>
 <footer class=site-footer>
 <div class=inner>
-<section class=copyright>© Matt Baker</section>
+<section class=copyright>© Matt Baker (borrowing inspiration from Scott Berry)</section>
 <section></section>
 <section>
 <a href=https://themes.gohugo.io/hugo-scroll/>Design</a> template
